fix button alignment

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -18,10 +18,7 @@ body {
 
 .content {
   background: #e3f4ff;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding: 16px 8px;
   border: 8px solid white;
 }
 
@@ -37,9 +34,5 @@ button {
   background: white;
   border: 1px solid #eee;
   margin: 0 auto;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  
+  padding: 8px 24px;
 }
